--- a/spec/tags/frozen/language/return_tags.txt
+++ b/spec/tags/frozen/language/return_tags.txt
@@ -1,1 +1,2 @@
-fails:The return keyword within a begin executes the ensure clause when begin/ensure are inside a lambda
+fails:The return keyword in a Thread raises a ThreadError if used to exit a thread
+fails:The return keyword within a block raises a LocalJumpError if there is no lexicaly enclosing method
