More tag updates for language specs

--- a/spec/tags/frozen/language/regexp/modifiers_tags.txt
+++ b/spec/tags/frozen/language/regexp/modifiers_tags.txt
@@ -1,1 +1,4 @@
 fails:Regexps with modifers does not do thread synchronization for /o
+breaks:Regexps with modifers supports modifier combinations
+breaks:Regexps with modifers supports (?imx-imx) (inline modifiers)
+breaks:Regexps with modifers supports (?imx-imx:expr) (scoped inline modifiers)
