--- a/Changes
+++ b/Changes
@@ -2,6 +2,14 @@
 
 == Unreleased Changes
 
+  optimize fetch/store to Ruby global variables
+  Rewrite Hash, IdentityHash to no longer inherit from Smalltalk
+  KeyValueDictionary ; the implementations are closer to pure Ruby.
+  Fix parser failure part of Trac 483.
+  Fix Trac 641 .
+  Changes to Thread implementation to go with changes to Smalltalk
+  implementation of GsProcess>>terminate .
+
 * Removed old workaround for json and trac 616, which has been fixed.
   If you were doing:     require 'maglev_json'
   You must instead do:   require 'json'
@@ -11,7 +19,7 @@
 * fixes to pass more core/io specs.
 * Moved mdb and hat_trick to examples/persistence.
 * More Gprof support.  Add ability to suspend and resume sampling.
-* Added methods to read temp obj size to System
+* Added methods temp_obj_space*  to System
 
 == Changes for 22619
 
