--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
 
 * Fix persistence-api documentation: fixed bogus references to
   Module#persistable= 
+* Fix Trac 657 in implementation of class variables
 
 == Changes for 22804  2010-01-29
 
