--- a/Changes
+++ b/Changes
@@ -6,7 +6,7 @@
 
 == Changes for 22816  2010-02-02
 
-* Replaxced previously patched irb with unpatched irb.rb and irb library
+* Replaced previously patched irb with unpatched irb.rb and irb library
 * Fix Trac 657, 659, 661
 * Fix assertion failure in Ruby 'break' in 'slow' build.
 * persistence-api documentation: fixed bogus references to
