--- a/src/baseline/raw_benchmarks/tiers/README
+++ b/src/baseline/raw_benchmarks/tiers/README
@@ -1,11 +1,9 @@
-To run a set of benchmarks against every rvm installed ruby do:
+To run a set of benchmarks against every rvm installed ruby, then
+generate web pages and a comparison spreadsheet of the results:
   
   nohup benchmark_rvm_rubies.sh all &
 
-NOTE: first do "rvm use maglev; rvm system" to make sure a Maglev stone 
-is running under rvm.
-
-The Rakefile parses the run.yaml files produced by the compare scripts
+The Rakefile parses the run.yaml files produced by the compare script
 and generates a .csv file or web page containing normalized geometric means.
 
   rake to_csv  # Generate a CSV file of benchmark results
@@ -32,6 +30,11 @@ To use speed instead:
 
 The default OUTPUT_DIR is ./results. To put results elsewhere:
   rake OUTPUT_DIR=~/benchmark_performance
+
+The default output filename includes the operating system and hostname followed
+by an underscore. i.e. "Linux-aries_" You can change it:
+  rake IDENT="Ubuntu_"
+  rake IDENT="Darwin_"
 
 Note: all runs to be compared in the spreadsheet should be against the same rubies.
 Otherwise, the overall Geometric Mean can not be computed.
