--- a/spec/tags/frozen/language/defined_tags.txt
+++ b/spec/tags/frozen/language/defined_tags.txt
@@ -1,3 +1,4 @@
 fails:The defined? keyword returns 'local-variable' when x = 1; defined?(x) is sent
+fails:The defined? keyword returns nil for defined?(super) when a superclass undef's the method
 fails:The defined? keyword returns 'yield' when there is a block to yield to and defined?(yield) is sent
 fails:The defined? keyword returns 'local-variable(in-block)' when defined? is called on a block var
