--- a/spec/tags/frozen/language/regexp_tags.txt
+++ b/spec/tags/frozen/language/regexp_tags.txt
@@ -1,3 +1,3 @@
+fails:Literal Regexps disallows first part of paired delimiters to be used as non-paired delimiters
 fails:Literal Regexps disallows spaces after %r and delimiter
-breaks:Literal Regexps disallows first part of paired delimiters to be used as non-paired delimiters
 breaks:Literal Regexps disallows alphabets as non-paired delimiter with %r
