Cleaned up changes file - remove ref to 22873

--- a/Changes
+++ b/Changes
@@ -6,19 +6,15 @@
 
 == Changes for 22891  2010-02-18
 
-* Fix Trac 662, 663, 665, 666
-* Impement  ENV.delete
-* Indexing is fixed: clean up and turn on examples/persistence/indexing
+* Switch from RbYaml to libyaml + Psych
+* Fix Trac 610, 662, 663, 664, 665, 666
+* Fix Trac 483, 473, 457, 422 (fixed by a previous release)
+* Impement ENV.delete
+* Added Enumerable#each_slice (but no Enumerator support).
 * Add Socket::Constants
+* Indexing is fixed: clean up and turn on examples/persistence/indexing
 * Major underlying changes to AIO in GemStone -- replaces the use of 
   POSIX asynchronous IO with our own thread-based IO system for writing tranlogs
-
-== Changes for 22873  2010-02-15
-
-* Switch from RbYaml to libyaml + Psych
-* Added Enumerable#each_slice (but no Enumerator support).
-* Fix Trac 664, 610
-* Fix Trac 483, 473, 457, 422 (fixed by a previous release)
 
 == Changes for 22816  2010-02-02
 
