--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 = MagLev Change Log
 
+== Changes for 22919  2010-02-26
+
+* Changing base version from 1.8.6 to 1.8.7 so we can begin 1.8.7 work
+* Fixed problem preventing update to RubyGems 1.3.6
+* Fixed problem on Mac with FFI callout/callin that caused YAML crashes
+
 == Changes for 22907  2010-02-24
 
 * in FFI implement callback , implement C float args .
