--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 = MagLev Change Log
 
   Ruby version is now 1.8.7 .
-  Fix Trac 646, 672, 676, 677
+  Fix Trac 174, 277, 646, 650, 672, 676, 677 
+  
 
 == Changes for 22985  2010-03-09
 
