--- a/Changes
+++ b/Changes
@@ -1,11 +1,16 @@
 = MagLev Change Log
 
-== Unreleased Changes
+== Changes for 23049  2010-03-18
 
+* Upgrade from Ruby 1.8.6 to 1.8.7
 * Changed operator names for Indexed search.  See IdentitySet#search for doc.
 * Turn on ri and rdoc for RubyGems.  RubyGems 1.3.6 installs cleanly now.
-* Ruby version is now 1.8.7 .
-* Fix Trac 646, 672, 676, 677
+* Fix Trac 643, 646, 650, 672, 674, 676, 677
+* Fix Trac 76, 122, 174, 181, 182, 189, 270, 277, 524, 558
+* FFI::Pointer is now identical to Smalltalk class CByteArray
+* Several improvements to underlying GemStone system including:
+  Refactor mutex code such that the return code from a mutex call is always 
+  checked and we print out the file and line number where the error occurs.
 
 == Changes for 22985  2010-03-09
 
