--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 = MagLev Change Log
 
+== Changes for 23101  2010-03-22
+
+* Fix YAML issue with "maglev-gem install" for Sinatra 0.9.6
+* Underlying changes prompted by migration work
+* class CCallin works on Sparc
+* class CCallout on Sparc supports both float and double args
+
 == Changes for 23082  2010-03-19
 
 * Upgrade from Ruby 1.8.6 to 1.8.7
