--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
 * Merged latest changes psych mastwr on github
 * Fixed bug in psych
 * Fixed writing of alias and anchor in YAML
+* Fix Trac 471, 621, 684  in irb .
 
 == Changes for 23101  2010-03-22
 
