Added Changes and 692 to vmunit

--- a/Changes
+++ b/Changes
@@ -6,10 +6,10 @@
   initialize returned nil.
 * Fixed test rake in examples to not depend on Sinatra version
 * Merged latest changes from psych master on github
-* Fixed bug in psych
+* Fixed bug in psych: handling of empty and white-space only strings
 * Fixed writing of alias and anchor in YAML
 * Fix Trac 471, 621, 684  in irb .
-* Fix Trac 685, 686, 690, 691 .
+* Fix Trac 685, 686, 690, 691, 692 .
 
 == Changes for 23101  2010-03-22
 
