Updated changes file; added emacs ruby mode to maglev-irb

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
 
 == Unreleased Changes 
 
+* Updated to RubyGems 1.3.6
 * Fixed problem with Array.new returning nil for subclasses whose  
   initialize returned nil.
 * Fixed test rake in examples to not depend on Sinatra version
