--- a/Changes
+++ b/Changes
@@ -1,10 +1,13 @@
 = MagLev Change Log
 
-== Unreleased Changes 
+== Changes for 23171  2010-04-02
 
 * Updated to RubyGems 1.3.6
+* Fixed problem exposed by Sinatra 1.0
+* Added rdoc, ri, and erb executables to bin directory
 * Fixed problem with Array.new returning nil for subclasses whose  
   initialize returned nil.
+* Improved exception handler printout
 * Fixed test rake in examples to not depend on Sinatra version
 * Merged latest changes from psych master on github
 * Fixed bug in psych: handling of empty and white-space only strings
@@ -12,6 +15,8 @@
 * Fix Trac 471, 621, 684  in irb .
 * Fix Trac 631, 685, 686, 690, 691, 692 .
 * Implemented ObjectSpace#define_finalizer 
+* Added jcode
+* Various fixes in underlying GemStone 3.0 system.
 
 == Changes for 23101  2010-03-22
 
